# pdf_translator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_translated.md
pdf_translator/: __init__.py  gemini_client.py  gemini_models.py  pdf_processor.py
pdf_translator.egg-info/: PKG-INFO
tests/: test_gemini_client.py  test_pdf_processor.py
